crates/wac-parser/tests/resolution/fail/mismatched-func-result-type/foo/bar.wat
(component
  (instance (import "x")
    (export "f" (func (result "a" string) (result "b" u32)))
  )
)
